--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,22 @@
-body {
-  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+html, body {
+  height: 100%;             /* penting supaya flex penuh */
+  margin: 0;
+  background-color: white;
 }
 
+.content {
+  flex: 1;                  /* isi konten jadi fleksibel */
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;        /* tinggi minimal 1 layar */
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+.content {
+  flex: 1;                  /* isi konten jadi fleksibel */
+}
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
