--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,23 @@
 html, body {
-  height: 100%;             /* penting supaya flex penuh */
+  height: 100%;            
   margin: 0;
-  background-color: white;
+  padding-top: 80px;
+  background-color: rgb(255, 255, 255);
 }
 
 .content {
-  flex: 1;                  /* isi konten jadi fleksibel */
+  flex: 1; 
+  margin-bottom: 50px;                
 }
 
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;        /* tinggi minimal 1 layar */
+  min-height: 100vh;       
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 .content {
-  flex: 1;                  /* isi konten jadi fleksibel */
+  flex: 1;             
 }
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -41,6 +43,7 @@ a:hover {
   color: #fff;
   padding: 7rem 0;
   background-color: #141d2a;
+  width: 100%;
 }
 
 .footer-20192 .container {
