--- a/public/css/count.css
+++ b/public/css/count.css
@@ -1,6 +1,7 @@
 .counter-section {
   position: relative;
-  background: url("{{ asset('images/skirk1.jpg') }}") ;
+  background:  url("/images/skirk1.jpg") ;
+  background-size: cover;  
   color: #fff;
 }
 
@@ -8,12 +9,12 @@
   position: absolute;
   top: 0; left: 0;
   width: 100%; height: 100%;
-  background: rgba(0, 0, 50, 0.6); /* efek gelap */
+  background: rgba(0, 0, 50, 0.4); /* overlay gelap */
 }
 
 .counter-section .container {
   position: relative;
-  z-index: 2; /* supaya teks di atas overlay */
+  z-index: 2;
 }
 
 .counter {
