menambah fitur filter, search dan bulking action di dashboard superadmin

--- a/public/css/count.css
+++ b/public/css/count.css
@@ -9,7 +9,7 @@
   position: absolute;
   top: 0; left: 0;
   width: 100%; height: 100%;
-  background: rgba(0, 0, 50, 0.4); /* overlay gelap */
+  background: rgba(0, 0, 50, 0.4); 
 }
 
 .counter-section .container {
